add: table schemas